python/testData/quickFixes/PyRemoveTrailingSuffixQuickFixTest/fixl.py
<error descr="Python version 3.10 does not support a trailing 'l'">1000l</error>